--- a/TransformacionesElementales.ipynb
+++ b/TransformacionesElementales.ipynb
@@ -6,7 +6,7 @@
       "name": "TransformacionesElementales",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMTSZwIdNYQfaUjN+XuvZZk",
+      "authorship_tag": "ABX9TyMmZnvk28vEuP2XlLscnYrD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,9 +83,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d2a56a0a-a363-4eb6-e52a-701d833c2e53"
+        "outputId": "76c3ecf1-1577-4d1f-9728-5d2bbad30b6c"
       },
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "name": "stdout",
@@ -107,31 +107,20 @@
     {
       "cell_type": "code",
       "source": [
-        "listaAuxPuntos = []\n",
-        "for i in range(len(x)):\n",
-        "    h = [x[i], y[i]]\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "wCIGa0axjzZP"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Se grafica la figura inicial\n",
         "#x = [-3, -5, -4, -3, -2, -1]\n",
         "#y = [2, 4, 5, 4, 5, 4]\n",
         "#noPuntos = 6\n",
-        "\n",
-        "for i in range(noPuntos -1):\n",
-        "    plt.plot([x[i], x[i+1]],[y[i], y[i+1]], \"b-\")\n",
-        "plt.plot([x[0], x[noPuntos-1]], [y[0], y[noPuntos-1]], \"b-\")\n",
-        "plt.show()\n",
-        "\n"
+        "#orden = 1\n",
+        "if(orden == 1):\n",
+        "    for i in range(noPuntos -1):\n",
+        "        plt.plot([x[i], x[i+1]],[y[i], y[i+1]], \"b-\")\n",
+        "    plt.plot([x[0], x[noPuntos-1]], [y[0], y[noPuntos-1]], \"b-\")\n",
+        "    plt.show()\n",
+        "else:\n",
+        "    print()\n",
+        "    \n",
+        "    "
       ],
       "metadata": {
         "id": "YMhOYMpaKnRO",
@@ -139,9 +128,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 265
         },
-        "outputId": "f875eead-a7b7-456f-d3aa-5ca762644f09"
+        "outputId": "2b4c0dc3-af95-4bb0-ddc1-edd6297e8fcf"
       },
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -186,7 +175,7 @@
       "metadata": {
         "id": "RvZGai7sMnEO"
       },
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -229,9 +218,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7796e19a-5491-4d29-ca9b-421a7fd64e7f"
+        "outputId": "48ff805b-6c94-4cfc-9e6f-bfd491addc0e"
       },
-      "execution_count": 11,
+      "execution_count": 20,
       "outputs": [
         {
           "name": "stdout",
@@ -260,37 +249,6 @@
     {
       "cell_type": "code",
       "source": [
-        "print(listaRotaciones)\n",
-        "print(escalamientoEnX)\n",
-        "print(escalamientoEnY)\n",
-        "print(trasladoEnX)\n",
-        "print(trasladoEnY)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oN1L5lqIgc6u",
-        "outputId": "ecf81ea2-64ea-4e94-857b-c3cdb184b385"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[1.3788999999999998, 10.0, 11.0]]\n",
-            "0.1375\n",
-            "0.1375\n",
-            "0.0\n",
-            "0.0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Se aplican las transformaciones\n",
         "# Reducción\n",
         "#x = [5, 13, 13]\n",
@@ -305,8 +263,6 @@
         "\n",
         "            x[j] = e\n",
         "            y[j] = f\n",
-        "print(x)\n",
-        "print(y)\n",
         "\n",
         "# Escalar\n",
         "for i in range(len(x)):\n",
@@ -314,8 +270,6 @@
         "    x[i] = round(float(a * escalamientoEnX), 4)\n",
         "    b = y[i]\n",
         "    y[i] = round(float(b * escalamientoEnY), 4)\n",
-        "print(x)\n",
-        "print(y)\n",
         "\n",
         "# Traslado\n",
         "for i in range(len(x)):\n",
@@ -331,9 +285,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee3d751a-6c2c-46f6-8f1a-e78d69d7d7ea"
+        "outputId": "2fedee00-eea1-48b1-b9b0-9dec5d593981"
       },
-      "execution_count": 13,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,10 +306,15 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in range(noPuntos -1):\n",
-        "    plt.plot([x[i], x[i+1]],[y[i], y[i+1]], \"b-\")\n",
-        "plt.plot([x[0], x[noPuntos-1]], [y[0], y[noPuntos-1]], \"b-\")\n",
-        "plt.show()"
+        "# Se grafica la figura con las transformaciones\n",
+        "\n",
+        "if(orden == 1):\n",
+        "    for i in range(noPuntos -1):\n",
+        "        plt.plot([x[i], x[i+1]],[y[i], y[i+1]], \"b-\")\n",
+        "    plt.plot([x[0], x[noPuntos-1]], [y[0], y[noPuntos-1]], \"b-\")\n",
+        "    plt.show()\n",
+        "else:\n",
+        "    print()"
       ],
       "metadata": {
         "id": "W1JEOYu2S8CE",
@@ -363,9 +322,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 265
         },
-        "outputId": "3ef678dd-99ad-4053-c591-3922de6699fb"
+        "outputId": "c4be9a43-4b5e-4e1d-f737-3824fa851763"
       },
-      "execution_count": 14,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
