--- a/CalcularCoordenadas.ipynb
+++ b/CalcularCoordenadas.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled27.ipynb",
+      "name": "CalcularCoordenadas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOjKohz0Fmk4nnyVfchSUh9",
+      "authorship_tag": "ABX9TyOqaO5m006mcZPO1QaQanth",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,8 +31,11 @@
     {
       "cell_type": "code",
       "source": [
+        "# Se cargan las librerias\n",
+        "\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from mpl_toolkits.mplot3d import axes3d\n"
       ],
       "metadata": {
         "id": "UMGtYAfDb6Km"
@@ -42,12 +45,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 40,
       "metadata": {
         "id": "UOHsyf11UioY"
       },
       "outputs": [],
       "source": [
+        "# Se definen todas las funciones necesarias\n",
+        "\n",
         "def obtenerPunto3D():\n",
         "    print(\"Ingrese el punto: \")\n",
         "    punto = input()\n",
@@ -107,34 +112,25 @@
         "            y = np.array([[listaY[i], listaY[(i + mitad)]]])\n",
         "            z = np.array([[listaZ[i], listaZ[(i + mitad)]]])\n",
         "            ax1.plot_wireframe(x, y, z)\n",
+        "\n",
+        "def graficarFigura2D(listaX, listaY):\n",
+        "    for i in range(len(listaX) -1):\n",
+        "        plt.plot([listaX[i], listaX[i+1]],[listaY[i], listaY[i+1]], \"b-\")\n",
+        "    plt.plot([listaX[0], listaX[len(listaX)-1]], [listaY[0], listaY[len(listaX)-1]], \"b-\")\n",
+        "    plt.show()\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "xyz = obtenerPunto2D()\n",
-        "print(xyz)"
+        ""
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Khl-EYg9Vp-6",
-        "outputId": "99e9afb6-3d46-4ee9-bb88-e87aa0ffd195"
+        "id": "Khl-EYg9Vp-6"
       },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingrese el punto: \n",
-            "(4,5)\n",
-            "[4, 5]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
