--- a/CalcularCoordenadas.ipynb
+++ b/CalcularCoordenadas.ipynb
@@ -6,7 +6,7 @@
       "name": "CalcularCoordenadas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOqaO5m006mcZPO1QaQanth",
+      "authorship_tag": "ABX9TyMbS1pQmWV1vZlFqzaCoq6N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -124,7 +124,11 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Se obtiene informacion requerida para graficar\n",
+        "\n",
+        "numeroDimensiones = int(input(\"¿Cuantas dimensiones son requeridas?: \"))\n",
+        "numeroPuntos = int(input(\"¿Cuantos puntos tiene la figura?: \"))\n",
+        "\n"
       ],
       "metadata": {
         "id": "Khl-EYg9Vp-6"
